--- a/autobuild/Dockerfile
+++ b/autobuild/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:16.04
-MAINTAINER Bibin Wilson <bibinwilsonn@gmail.com>
+LABEL Author="Christian Wiedemann"
 
 # Make sure the package repository is up to date.
 RUN apt-get update
@@ -10,7 +10,24 @@ RUN sed -i 's|session    required     pam_loginuid.so|session    optional     pa
 RUN mkdir -p /var/run/sshd
 
 USER root
-RUN apt-get update && apt-get install -y subversion locales maven ant ant-contrib dos2unix docker-ce
+
+RUN apt-get remove docker docker-engine docker.io
+
+# guide from https://docs.docker.com/engine/installation/linux/docker-ce/ubuntu/#set-up-the-repository
+RUN apt-get update && apt-get install -y subversion locales maven ant ant-contrib dos2unix apt-transport-https \
+    ca-certificates \
+    curl \
+    software-properties-common
+
+RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+RUN apt-key fingerprint 0EBFCD88
+RUN add-apt-repository \
+   "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+   $(lsb_release -cs) \
+   stable"
+
+RUN apt-get update && apt-get install docker-ce
+
 
 
 
