--- a/autobuild/Dockerfile
+++ b/autobuild/Dockerfile
@@ -20,7 +20,7 @@ RUN apt-get update && apt-get install -y apt-transport-https \
     curl \
     software-properties-common
 
-RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
 RUN apt-key fingerprint 0EBFCD88
 RUN add-apt-repository \
    "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
